--- a/Emscrptnwasm+js2html.html
+++ b/Emscrptnwasm+js2html.html
@@ -2,72 +2,134 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Standalone WASM/WebGL Console (Mobile Friendly)</title>
+  <title>Run Emscripten WASM+JS (Upload & Export Single HTML)</title>
   <style>
-    body { margin: 0; background: #181818; color: #eee; font-family: monospace; }
-    #webgl-canvas { display: block; width: 100vw; height: 80vh; background: #222; }
-    #console { width: 100vw; height: 20vh; background: #111; color: #0f0; overflow-y: auto; }
-    #input { width: 95vw; }
-    #start-msg { position:absolute;top:0;left:0;width:100vw;height:100vh;display:flex;align-items:center;justify-content:center;background:#222;color:#fff;z-index:10;font-size:2em;}
+    body { background: #181818; color: #eee; font-family: monospace; margin: 0; }
+    #main { display: flex; flex-direction: column; align-items: center; margin-top: 3em; }
+    #console { width: 90vw; height: 20vh; background: #111; color: #0f0; overflow-y: auto; margin: 1em 0; }
+    #input { width: 85vw; }
+    #upload-area {
+      background: #222; padding: 2em 2em 1em 2em; border-radius: 1em;
+      display: flex; flex-direction: column; align-items: center;
+      box-shadow: 0 0 10px #000a;
+    }
+    label { margin: 0.5em 0 0.2em 0; }
+    button { margin-top: 1em; font-size: 1.1em; }
+    #download-btn {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      z-index: 100;
+      font-size: 1em;
+      background: #333;
+      color: #fff;
+      border: 1px solid #444;
+      padding: 0.5em 1em;
+      border-radius: 0.3em;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+    #download-btn:hover { background: #444; }
   </style>
 </head>
 <body>
-  <div id="start-msg" onclick="startWasm()">Tap to start</div>
-  <canvas id="webgl-canvas"></canvas>
-  <div id="console"></div>
-  <input id="input" placeholder="Type WASM export or JS command and press Enter">
+  <button id="download-btn" title="Download this page as HTML">Download .html</button>
+  <div id="main">
+    <div id="upload-area">
+      <label for="js-upload">Upload Emscripten JS glue file:</label>
+      <input type="file" id="js-upload" accept=".js">
+      <label for="wasm-upload">Upload WASM file:</label>
+      <input type="file" id="wasm-upload" accept=".wasm">
+      <button id="run-btn" disabled>Load & Run</button>
+    </div>
+    <div id="console"></div>
+    <input id="input" placeholder="Type WASM export or JS command and press Enter">
+  </div>
   <script>
-    function resizeCanvas() {
-      const canvas = document.getElementById('webgl-canvas');
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight * 0.8;
-    }
-    window.addEventListener('resize', resizeCanvas);
-    resizeCanvas();
+    let jsCode = null, wasmBytes = null, wasmBase64 = null, jsFileName = "", wasmFileName = "";
+    let moduleInstance = null, moduleExports = null;
+
+    const runBtn = document.getElementById('run-btn');
+    const jsInput = document.getElementById('js-upload');
+    const wasmInput = document.getElementById('wasm-upload');
+    const consoleDiv = document.getElementById('console');
 
     function log(msg) {
-      const consoleDiv = document.getElementById('console');
       consoleDiv.innerHTML += msg + "<br>";
       consoleDiv.scrollTop = consoleDiv.scrollHeight;
     }
 
-    function base64ToUint8Array(base64) {
-      const binary = atob(base64);
-      const bytes = new Uint8Array(binary.length);
-      for (let i = 0; i < binary.length; i++) {
-        bytes[i] = binary.charCodeAt(i);
-      }
-      return bytes;
+    jsInput.addEventListener('change', () => {
+      const file = jsInput.files[0];
+      if (!file) return;
+      jsFileName = file.name;
+      const reader = new FileReader();
+      reader.onload = e => {
+        jsCode = e.target.result;
+        checkReady();
+      };
+      reader.readAsText(file);
+    });
+
+    wasmInput.addEventListener('change', () => {
+      const file = wasmInput.files[0];
+      if (!file) return;
+      wasmFileName = file.name;
+      const reader = new FileReader();
+      reader.onload = e => {
+        wasmBytes = new Uint8Array(e.target.result);
+        // Convert to base64 for embedding
+        wasmBase64 = arrayBufferToBase64(e.target.result);
+        checkReady();
+      };
+      reader.readAsArrayBuffer(file);
+    });
+
+    function checkReady() {
+      runBtn.disabled = !(jsCode && wasmBytes);
     }
 
-    function startWasm() {
-      document.getElementById('start-msg').style.display = 'none';
-      const wasmBase64 = "BASE64_WASM_STRING";
-      const wasmBytes = base64ToUint8Array(wasmBase64);
+    runBtn.addEventListener('click', () => {
+      document.getElementById('upload-area').style.display = 'none';
+      runBtn.disabled = true;
+      runEmscriptenModule(jsCode, wasmBytes);
+    });
 
-      if (typeof WebAssembly.instantiate === "function") {
-        WebAssembly.instantiate(wasmBytes.buffer, {
-          env: {}
-        }).then(obj => {
-          window.wasmInstance = obj.instance;
-          window.wasmExports = obj.instance.exports;
-          log('WASM loaded. Available exports: ' + Object.keys(window.wasmExports).join(', '));
-          // Optionally, initialize WebGL here using wasmExports
-        }).catch(err => {
-          log('WASM failed to load: ' + err);
-        });
-      } else {
-        log('WebAssembly is not supported in this browser.');
+    function runEmscriptenModule(jsCode, wasmBytes) {
+      // Create a Blob URL for the WASM
+      const wasmURL = URL.createObjectURL(new Blob([wasmBytes], {type: "application/wasm"}));
+      // Patch Module object for Emscripten JS
+      window.Module = {
+        locateFile: function(path) {
+          if (path.endsWith('.wasm')) return wasmURL;
+          return path;
+        },
+        print: log,
+        printErr: msg => log('<span style="color:red">' + msg + '</span>'),
+        onRuntimeInitialized: function() {
+          log('Emscripten module loaded.');
+          if (window.Module && window.Module.asm) {
+            moduleInstance = window.Module;
+            moduleExports = window.Module.asm;
+          }
+        }
+      };
+      // Evaluate the Emscripten JS glue code
+      try {
+        eval(jsCode);
+      } catch (e) {
+        log('Error running Emscripten JS: ' + e);
       }
     }
 
+    // Console input handler for calling exports or JS
     document.getElementById('input').addEventListener('keydown', function(e) {
       if (e.key === 'Enter') {
         const cmd = this.value;
         this.value = '';
         try {
-          if (window.wasmExports && cmd in window.wasmExports) {
-            const result = window.wasmExports[cmd]();
+          if (moduleExports && cmd in moduleExports) {
+            const result = moduleExports[cmd]();
             log('> ' + cmd + '() = ' + result);
           } else {
             const result = eval(cmd);
@@ -77,6 +139,123 @@
           log('Error: ' + err);
         }
       }
+    });
+
+    // ArrayBuffer to base64
+    function arrayBufferToBase64(buffer) {
+      let binary = '';
+      const bytes = new Uint8Array(buffer);
+      for (let i = 0; i < bytes.byteLength; i++) {
+        binary += String.fromCharCode(bytes[i]);
+      }
+      return btoa(binary);
+    }
+
+    // Download current HTML as file, embedding JS and WASM
+    document.getElementById('download-btn').addEventListener('click', function() {
+      if (!(jsCode && wasmBase64)) {
+        alert("Please upload both JS and WASM files first.");
+        return;
+      }
+
+      // The template for the exported HTML
+      const html =
+`<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Standalone Emscripten WASM+JS Export</title>
+  <style>
+    body { background: #181818; color: #eee; font-family: monospace; margin: 0; }
+    #console { width: 90vw; height: 20vh; background: #111; color: #0f0; overflow-y: auto; margin: 1em auto; }
+    #input { width: 85vw; display: block; margin: 0 auto; }
+  </style>
+</head>
+<body>
+  <div id="console"></div>
+  <input id="input" placeholder="Type WASM export or JS command and press Enter">
+  <script>
+    // Embedded WASM as base64
+    const wasmBase64 = "${wasmBase64}";
+    // Embedded JS glue code
+    const jsCode = \`${jsCode.replace(/`/g, '\\`')}\`;
+
+    // Helper: base64 to Uint8Array
+    function base64ToUint8Array(base64) {
+      const binary = atob(base64);
+      const bytes = new Uint8Array(binary.length);
+      for (let i = 0; i < binary.length; i++) {
+        bytes[i] = binary.charCodeAt(i);
+      }
+      return bytes;
+    }
+
+    // Logging
+    const consoleDiv = document.getElementById('console');
+    function log(msg) {
+      consoleDiv.innerHTML += msg + "<br>";
+      consoleDiv.scrollTop = consoleDiv.scrollHeight;
+    }
+
+    // Run Emscripten module from embedded JS and WASM
+    (function() {
+      const wasmBytes = base64ToUint8Array(wasmBase64);
+      const wasmURL = URL.createObjectURL(new Blob([wasmBytes], {type: "application/wasm"}));
+      window.Module = {
+        locateFile: function(path) {
+          if (path.endsWith('.wasm')) return wasmURL;
+          return path;
+        },
+        print: log,
+        printErr: msg => log('<span style="color:red">' + msg + '</span>'),
+        onRuntimeInitialized: function() {
+          log('Emscripten module loaded.');
+          if (window.Module && window.Module.asm) {
+            window.moduleInstance = window.Module;
+            window.moduleExports = window.Module.asm;
+          }
+        }
+      };
+      try {
+        eval(jsCode);
+      } catch (e) {
+        log('Error running Emscripten JS: ' + e);
+      }
+    })();
+
+    // Console input handler
+    document.getElementById('input').addEventListener('keydown', function(e) {
+      if (e.key === 'Enter') {
+        const cmd = this.value;
+        this.value = '';
+        try {
+          if (window.moduleExports && cmd in window.moduleExports) {
+            const result = window.moduleExports[cmd]();
+            log('> ' + cmd + '() = ' + result);
+          } else {
+            const result = eval(cmd);
+            log('> ' + cmd + ' = ' + result);
+          }
+        } catch (err) {
+          log('Error: ' + err);
+        }
+      }
+    });
+  </script>
+</body>
+</html>`;
+
+      // Create and download the HTML file
+      const blob = new Blob([html], {type: "text/html"});
+      const a = document.createElement('a');
+      a.href = URL.createObjectURL(blob);
+      a.download = "standalone-wasm.html";
+      document.body.appendChild(a);
+      a.click();
+      setTimeout(() => {
+        URL.revokeObjectURL(a.href);
+        a.remove();
+      }, 100);
     });
   </script>
 </body>
